--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blissmart</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div>
+        
+    </div>
 </body>
 </html>
