added complete html structure to the home page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,424 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div>
-        
+    <div class="root">
+        <div class="menu-bar">
+            <div class="nav-icon"></ndiv>
+            <h2>Blissmart</h2>
+            <div class="search-bar">
+                <img src="search" alt="search icon"/>
+                <form class="search-box">
+                    <input type="text" placeholder="Search items here">
+                </form>
+                <div class="filter-button"></div>
+                <div class="location-button"></div>
+            </div>
+            <div class="cart-button"></div>
+            <div class="login-button"></div>
+        </div>
+        <div class="category-bar">
+            <ul class="category-list">
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-1.jpg" alt="Furniture"/>
+                        </div>
+                        <p class="ctgry-name">Furniture</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-2.jpg" alt="Clothing"/>
+                        </div>
+                        <p class="ctgry-name">Clothing</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-3.jpg" alt="Wall Decor"/>
+                        </div>
+                        <p class="ctgry-name">Wall Decor</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-4.jpg" alt="Kitchen"/>
+                        </div>
+                        <p class="ctgry-name">Kitchen</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-5.jpg" alt="Electronics"/>
+                        </div>
+                        <p class="ctgry-name">Electronics</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-6.jpg" alt="Sports"/>
+                        </div>
+                        <p class="ctgry-name">Sports</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-7.jpg" alt="Books"/>
+                        </div>
+                        <p class="ctgry-name">Books</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-8.jpg" alt="Kids"/>
+                        </div>
+                        <p class="ctgry-name">Kids</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-9.jpg" alt="Grocery"/>
+                        </div>
+                        <p class="ctgry-name">Grocery</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-10.jpg" alt="Mobile"/>
+                        </div>
+                        <p class="ctgry-name">Mobile</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-11.jpg" alt="Health"/>
+                        </div>
+                        <p class="ctgry-name">Health</p>
+                    </span>
+                </li>
+                <li>
+                    <span class="item">
+                        <div class="image-box">
+                            <img src="ctgry-12.jpg" alt="Beauty"/>
+                        </div>
+                        <p class="ctgry-name">Beauty</p>
+                    </span>
+                </li>
+            </ul>
+        </div>
+        <div class="carousel">
+            <div class="left-arrow">
+                <img src="left.png" alt="left-arrow"/>
+            </div>
+            <img src="img-1.jpg" alt="image-1"/>
+            <img src="img-2.jpg" alt="image-2"/>
+            <img src="img-3.jpg" alt="image-3"/>
+            <div class="right-arrow">
+                <img src="right.png" alt="left-arrow"/>
+            </div>
+        </div>
+        <div class="products-section">
+            <div class="products">
+                <h2 class="product-heading">
+                    Trending Products
+                </h2>
+                <div class="more-arrow">
+                    <img src="right.png"/>
+                </div>
+                <ul class="product-list">
+                    <li>
+                        <span class="product">
+                            <img src="chair.jpg" alt="chair"/>
+                            <h3 class="product-name">
+                                Caprica Armchair in Grey Colour
+                            </h3>
+                            <ul class="stars">
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="star.jpg">
+                                </li>
+                            </ul>
+                            <h3 class="price">₹ 9,900 /-</h3>
+                            <p class="desc">by @home</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="product">
+                            <img src="book-case.jpg" alt="book-case"/>
+                            <h3 class="product-name">
+                                Ichika Two Door Glass Book Case
+                            </h3>
+                            <ul class="stars">
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="star.jpg">
+                                </li>
+                                <li>
+                                    <img src="star.jpg">
+                                </li>
+                            </ul>
+                            <h3 class="price">₹ 19,999 /-</h3>
+                            <p class="desc">Mintwud by blissmart</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="product">
+                            <img src="onplus.jpg" alt="one plus"/>
+                            <h3 class="product-name">
+                                OnePlus 8T 5G (Lunar Silver, 8GB RAM, 128GB Storage)
+                            </h3>
+                            <ul class="stars">
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="half-star.jpg">
+                                </li>
+                            </ul>
+                            <h3 class="price">₹ 38,999 /-</h3>
+                            <p class="desc">Sold by Rocket Kommerce LLP</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="product">
+                            <img src="t-shirt.jpg" alt="t-shirt"/>
+                            <h3 class="product-name">
+                                status mantra cotton half sleeves t-shirt for men
+                            </h3>
+                            <ul class="stars">
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="star.jpg">
+                                </li>
+                                <li>
+                                    <img src="star.jpg">
+                                </li>
+                            </ul>
+                            <h3 class="price">₹ 550 /-</h3>
+                            <p class="desc">by status mantra store</p>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+            <div class="products">
+                <h2 class="product-heading">
+                    Explore nearby stores
+                </h2>
+                <div class="more-arrow">
+                    <img src="right.png"/>
+                </div>
+                <ul class="product-list">
+                    <li>
+                        <span class="product">
+                            <img src="shoes.jpg" alt="shoes"/>
+                            <h3 class="product-name">
+                                Agasi Men's Air Wonder Series shoes for daily use
+                            </h3>
+                            <ul class="stars">
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="star.jpg">
+                                </li>
+                                <li>
+                                    <img src="star.jpg">
+                                </li>
+                            </ul>
+                            <h3 class="price">₹ 489 /-</h3>
+                            <p class="desc">by Agasi</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="product">
+                            <img src="watch.jpg" alt="watch"/>
+                            <h3 class="product-name">
+                                TIMEWEAR Digital Men's Watch
+                            </h3>
+                            <ul class="stars">
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="star.jpg">
+                                </li>
+                            </ul>
+                            <h3 class="price">₹ 699 /-</h3>
+                            <p class="desc">by TIMEWEAR & BEYOND</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="product">
+                            <img src="sticker.jpg" alt="sticker"/>
+                            <h3 class="product-name">
+                                Solimo PVC Vinyl Wall Sticker for Living Room
+                            </h3>
+                            <ul class="stars">
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="half-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="star.jpg">
+                                </li>
+                            </ul>
+                            <h3 class="price">₹ 219 /-</h3>
+                            <p class="desc">Sold by cloudtail decor</p>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="product">
+                            <img src="samsung.jpg" alt="samsung"/>
+                            <h3 class="product-name">
+                                SAMSUNG Galaxy A71 (Prism Crush Black, 128 GB) (8 GB RAM)
+                            </h3>
+                            <ul class="stars">
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="full-star.jpg">
+                                </li>
+                                <li>
+                                    <img src="half-star.jpg">
+                                </li>
+                            </ul>
+                            <h3 class="price">₹ 29,990 /-</h3>
+                            <p class="desc">by mobile world</p>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="pager">
+            <div class="left-arrow pager">
+                <img src="left.png" alt="left-arrow"/>
+                <p class="text">Previous</p>
+            </div>
+            <div class="dots">
+                <ul class="dots-list">
+                    <li>
+                        <div class="dot filled"></div>
+                    </li>
+                    <li>
+                        <div class="dot"></div>
+                    </li>
+                    <li>
+                        <div class="dot"></div>
+                    </li>
+                    <li>
+                        <div class="dot"></div>
+                    </li>
+                    <li>
+                        <div class="dot"></div>
+                    </li>
+                </ul>
+            </div>
+            <div class="right-arrow pager">
+                <p class="text">Next</p>
+                <img src="right.png" alt="right-arrow"/>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="options">
+                <ul class="options-list">
+                    <li>
+                        About
+                    </li>
+                    <li>
+                        Orders
+                    </li>
+                    <li>
+                        Change password
+                    </li>
+                    <li>
+                        Order History
+                    </li>
+                    <li>
+                        Logout
+                    </li>
+                </ul>
+            </div>
+            <div class="logo">
+                <h1>Bm</h1>
+                <h3>Blissmart</h3>
+            </div>
+        </div>
     </div>
 </body>
 </html>
