--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blissmart</title>
     <link rel="stylesheet" href="./index.css">
+    <script src="index.js"></script>
 </head>
 <body>
     <div class="root">
@@ -67,9 +68,9 @@
                 <li>
                     <span class="item">
                         <div class="image-box">
-                            <img class="ctrgy-img" src="./images/category/ctgry-3.jpg" alt="Wall Decor"/>
+                            <img class="ctrgy-img" src="./images/category/ctgry-3.jpg" alt="Decor"/>
                         </div>
-                        <p class="ctgry-name">Wall Decor</p>
+                        <p class="ctgry-name">Decor</p>
                     </span>
                 </li>
                 <li>
@@ -231,7 +232,7 @@
                                 <img class="product-image" src="./images/products/oneplus.jpg" alt="one plus"/>
                             </div>
                             <h3 class="product-name">
-                                OnePlus 8T 5G (Lunar Silver, 8GB RAM, 128GB Storage)
+                                OnePlus 8T 5G (Lunar Silver, 8GB 128GB)
                             </h3>
                             <ul class="stars">
                                 <li>
