linked cartview.html

--- a/CartView.html
+++ b/CartView.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CartView</title>
-    <link rel="stylesheet" href="CartView.css">
+    <link rel="stylesheet" href="./CartView.css">
 </head>
 <body class=''>
     <div class='h-14 border-2 border-black bg-black flex justify-between items-center lg:h-16 '>
