--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="menu-right">
-                <a href="./cart.html"><img class="cart-button" src="./images/icons/cart.png" alt="cart"/></a>
+                <a href="./CartView.html"><div class="cart-button"><img class="cart-image" src="./images/icons/cart.png" alt="cart"/></div></a>
                 <h3 class="login-button"><a href="./Login-Signup.html">Login</a></h3>
             </div>
         </div>
