--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blissmart</title>
     <link rel="stylesheet" href="./index.css">
-    <script src="index.js"></script>
 </head>
 <body>
     <div class="root">
@@ -149,14 +148,14 @@
         </div>
         <div class="carousel">
             <div class="arrows">
-                <div class="left-arrow-box">
+                <div id="left-arrow" class="left-arrow-box">
                     <img class="arrow" src="./images/icons/left.png" alt="left-arrow"/>
                 </div>
-                <div class="right-arrow-box">
+                <div id="right-arrow" class="right-arrow-box">
                     <img class="arrow" src="./images/icons/right.png" alt="left-arrow"/>
                 </div>
             </div>
-            <img class="banner-image" src="./images/extra/banner-1.jpg" alt="image-1"/>
+            <img id="c-image" class="banner-image" src="./images/extra/banner-1.jpg" alt="image-1"/>
             
         </div>
         <div class="products-section">
@@ -466,5 +465,6 @@
             </div>
         </div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
