removed links of other pages

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div class="menu-right">
-                <a href="./CartView.html"><div class="cart-button"><img class="cart-image" src="./images/icons/cart.png" alt="cart"/></div></a>
-                <h3 class="login-button"><a href="./Login-Signup.html">Login</a></h3>
+                <div class="cart-button"><img class="cart-image" src="./images/icons/cart.png" alt="cart"/></div>
+                <h3 class="login-button">Login</h3>
             </div>
         </div>
         <div class="container">
